# SkillSimulate

./: .env.example  .gitignore  Makefile  environment.yml  outline.md  pyproject.toml  skills-lock.json
configs/: collapse_stress.yaml  dev.yaml  exp1_framing_pilot.yaml  exp1_full.yaml  exp1_pilot.yaml  exp1_v2.yaml  exp1_v3.yaml  exp1_wikipedia_pilot.yaml  exp1_wikipedia_smoke.yaml  exp2_full.yaml  models.yaml
data/: cluster_toxic_keywords.json
docs/: code_review.md  exp1_v3_detailed_explanation.md  lit_review_fidelity_validation.md  r4_persona_collapse_stress_test.md  release_checklist.md
plans/: exp1_smoke_fix_plan.md
scripts/: backfill_typical_thread_ids.py  benchmark_embedder.py  convert_distilled_skills.py  distill_skills.py  download_github.py  download_reddit.py  download_wikiconv.py  download_wikipedia.py  embed_style_distance.py  estimate_cost.py  export_corpus_k8_quantile.py  export_corpus_k8_quantile_merged.py  extract_cluster_toxic_keywords.py  feature_audit.py  generate_k4_final.py  generate_k8_final.py  generate_k8_final_quantile.py  generate_role_labels.py  generate_synthetic_corpus.py  k_sweep_full.py  k_sweep_pca.py  plot_exp1_smoke.py  pooling_experiment.py  reevaluate_pilot.py  results_to_latex.py  role_k_sweep.py  smoke_embedder.py  style_embed_ablation.py
src/: main.py
src/agents/: ablations.py  base.py  cadp.py  cadp_advisory.py  clustering_only.py  colleague_skill.py  compaction.py  descriptive.py  length_matched.py  memory.py  planning.py  pop_aligned.py  registry.py  (+5 more)
tests/: test_simulation.py  test_token_and_resume.py
tmp/: tmp.py
(+156 files in other folders)
